feat: add focus-visible overlay support for mobile and keyboard users

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <article class="product-card">
       <header class="product-header">
-        <div class="header-img-wrapper">
+        <div class="header-img-wrapper" tabindex="0">
           <img class="product-img" src="images/image-equilibrium.jpg" alt=" photo of Equilibrium" />
         </div>
         <h2 class="title">Equilibrium #3429</h2>
